--- a/configurations/prometheus.yml.j2
+++ b/configurations/prometheus.yml.j2
@@ -1,7 +1,13 @@
+# prometheus.yml.j2
+
 global:
   scrape_interval: 15s
 
 scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
-      - targets: ['localhost:9100']
+      {% for host in groups['all'] %}
+      - targets: ['{{ hostvars[host].ansible_host }}:9100']
+        labels:
+          instance: '{{ host }}'
+      {% endfor %}
