--- a/configurations/prometheus.yml.j2
+++ b/configurations/prometheus.yml.j2
@@ -1,3 +1,11 @@
+global:
+  scrape_interval: 15s
+
+scrape_configs:
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: ['localhost:9100']
+
 # prometheus.yml.j2
 
 global:
@@ -7,7 +15,7 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       {% for host in groups['all'] %}
-      - targets: ['{{ hostvars[host].ansible_host }}:9100']
+      - targets: ['{{ hostvars[host].ansible_host }}:9090']
         labels:
           instance: '{{ host }}'
       {% endfor %}
