--- a/configurations/prometheus.yml.j2
+++ b/configurations/prometheus.yml.j2
@@ -1,21 +1,17 @@
-global:
-  scrape_interval: 15s
-
-scrape_configs:
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['localhost:9100']
-
 # prometheus.yml.j2
 
 global:
   scrape_interval: 15s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+  
   - job_name: 'node_exporter'
     static_configs:
       {% for host in groups['all'] %}
-      - targets: ['{{ hostvars[host].ansible_host }}:9090']
+      - targets: ['{{ hostvars[host].ansible_host }}:9100']
         labels:
           instance: '{{ host }}'
       {% endfor %}
