--- a/configurations/grafana.ini.j2
+++ b/configurations/grafana.ini.j2
@@ -3,5 +3,5 @@ http_port = 3000
 root_url = %(protocol)s://%(domain)s:%(http_port)s/
 
 [security]
-admin_user = Project_103
+admin_user = admin
 admin_password = {{ grafana_admin_password }}
